@@ -4,6 +4,8 @@ CHANGES-1.2.txt
 CHANGES IN CUPS V1.2.5
 
 	- Documentation updates (STR #2038)
+	- The SNMP backend no longer uses IPP for Epson printers
+	  (STR #2028)
 	- Updated the configure script for Tru64 UNIX 5.1 (STR
 	  #2033)
 	- Tru64 5.1B's getaddrinfo() and getnameinfo() functions
